# ude-user-docs

./: .gitignore  Doxyfile  index.md  package-lock.json  package.json  ude_config_self.json
.github/: CODEOWNERS
.github/workflows/: deploy.yml  trigger_tests.yml
.vitepress/: config.mts
.vitepress/theme/: custom.css  index.mts
.vitepress/theme/components/: Breadcrumbs.vue  ThemeToggle.vue
docs/: admin-deployment.md  admin-guide.md  case-study.md  chapter1-quick-start.md  chapter2-coding-standards.md  chapter3-config-reference.md  chapter4-case-study.md  commenting-rules.md  exclusion-gates.md  first-config.md  getting-started.md  global-settings.md  target-settings.md  user-guide.md
engine/: .gitignore  README.md  pyproject.toml
engine/.github/workflows/: ci.yml
engine/tests/: test_assets.py  test_caching.py  test_cli.py  test_doxygen_collector.py  test_doxygen_parser.py  test_exclusions.py  test_harness.py  test_html_renderer.py  test_hugo_renderer.py  test_integration_pipeline.py  test_interfaces.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_storage.py  utils.py
engine/tests/assets/doxygen/: class_definition.xml  class_swig_wrapper.xml  class_with_macros.xml  index.xml
engine/ude/: __init__.py  cli.py  interfaces.py  models.py  normalizer.py  orchestrator.py  storage.py
engine/ude/collectors/: doxygen.py
engine/ude/parsers/: __init__.py  doxygen.py
engine/ude/renderers/: __init__.py  hugo_markdown.py  static_html.py
engine/ude/templates/: class_layout.html
hugo-site/: hugo.toml
hugo-site/layouts/_default/: list.html  (+1 more)
(+22 files in other folders)
