[tool.poetry]
name = "ude"
version = "0.1.0"
description = "Universal Documentation Engine (UDE) core"
authors = ["Sir-Derryk <derry@example.com>"]
readme = "README.md"
packages = [{include = "ude"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=2.0"
jinja2 = "*"
lxml = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
